# workflows

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  solids_config.yaml
.github/workflows/: push-main.yml  test-and-build.yml
dags/iop/: iop_pull_sftp_new.py  sftp_service.py
workflows/: constants.py  dagster_types.py
workflows/clean_local_ftp_s3_dirs/: clean_dummy_files_from_s3.py  clean_ftp.py  clean_local.py  combined_cleaning.py
workflows/collect_save_and_upload_data/solids/: collect_files_to_download.py  connect_to_ftp_server.py  crawler_parser.py  display_content.py  dowloanda_file_from_ftp.py  download_file_from_s3.py  unzip.py  uploading_files_to_ftp.py  uploading_files_to_s3.py
workflows/pipelines/: my_pipeline.py
workflows/resources/: aws_resources.py  aws_resources_dev.yaml  download_a_file_from_ftp_solid_config_resources.py  ftp_resources.py  ftp_resources.yaml
workflows/steps/composite_solids/: run_all_steps.py
workflows/steps/solids/: add_arxiv_category.py  delete_older_workflows.py  set_schema.py
workflows/utils/: create_dir.py  ftp_connection.py  generators.py  paths.py
workflows_tests/test_pipelines/: test_my_pipeline.py  test_rerun_solids_after_download_file_from_s3.py
